# electric-power-inspection-robot

./: .gitignore  AGENTS.md  PROJECT_COVER.md  README.md  SECURITY.md
CAD/Retail-Cart-3D-Model/sldasm/: 小车底盘.SLDASM
CAD/Retail-Cart-3D-Model/stl/: 伸缩杆固定底座.3MF  伸缩杆支架盖子.3MF  前半圆.3MF  前半圆X.3MF  前后半圆连接件.3MF  双目垫板.3MF  后半圆.3MF  后半圆X.3MF  后半圆固定架.3MF  后半圆连接-固定件.3MF  底盘连接处支架X.3MF  支架垫片.3MF  模块固定.3MF  激光雷达固定架.3MF  电池固定.3MF  电池门.3MF  盖板.3MF  稳压板底座.3MF  英伟达固定板X.3MF  语音播报模块固定盖.3MF  语音播报模块外挂支架.3MF  连接-固定件.3MF
CAD/Retail-Cart-3D-Model/stp/: 伸缩杆固定底座.SLDPRT  模块固定.SLDPRT  稳压板底座.SLDPRT
docs/: AI_AGENT_ENGINEERING_DEBUG_MANUAL.md  AI_AGENT_ENGINEERING_LOG.md  AI智能体工程日志.md  GOOD_TESTING_GUIDE.md  ZED三维建模集成说明.md  cloud_platform_connection.md  electric_power_inspection_plan.md  mobile_app_bridge_api.md  mobile_debug_api.md  robot_display_ui.md  route_json_reference.md  safety_map_keepout.md  zed_spatial_mapping_integration.md  三维建图工作流程.md  云平台连接运维.md  快速使用.md  接口约定.md  本体QML操控台.md  热点断线自动重连运维.md  移动端桥接调试接口.md  路线JSON字段参考.md  迁移清理记录.md  项目概览.md
docs/architecture/: 01-答辩系统总架构图.mmd  02-ROS2节点通信拓扑.mmd  03-AI-Agent任务闭环时序.mmd  04-地图路线平台闭环.mmd  05-通信接口矩阵.md  README.md
docs/protocol/: robot-platform-v1.md  机器人平台协议-v1.md
docs/superpowers/plans/: 2026-07-12-inspection-agent.md  2026-07-12-巡检智能体实施计划.md  2026-07-14-bridge-page-qml-scope-fix.md  2026-07-14-dual-network-connection-fix.md  2026-07-14-project-documentation-refresh.md  2026-07-20-patrol-image-capture-phase-fix.md  2026-07-21-nav2-final-heading-deadzone.md  2026-07-22-mapping3d-upload-card.md  2026-07-22-qml-friendly-blue-ui.md  2026-07-22-readme-showcase-redesign.md  2026-07-22-scene-upload-mvp.md
docs/superpowers/specs/: 2026-07-12-inspection-agent-design.md  2026-07-14-dual-network-connection-fix-design.md  2026-07-14-project-documentation-design.md  (+9 more)
maps/: deprecated_route_patrol_001_20260704_200140.json  deprecated_route_patrol_001_20260714_204415.json  deprecated_route_patrol_001_20260715_103334.json  my_map.pgm  my_map.yaml  my_map_deprecated_20260625_152358.pgm  my_map_deprecated_20260625_152358.yaml  my_map_deprecated_20260714_204415.yaml  my_map_deprecated_20260715_103356.yaml  my_map_deprecated_20260720_161714.pgm  my_map_deprecated_20260720_161714.yaml  route_patrol_001.json  route_patrol_002.json  route_patrol_003.json
maps/keepout/: keepout_global_mask.pgm  keepout_global_mask.yaml  keepout_local_mask.pgm  keepout_local_mask.yaml  keepout_masks.metadata.json
scripts/: audit_navigation_map.py  build_on_jetson.sh  check_agent_setup.py  check_keepout_setup.py  check_local_kws.py  configure_agent_env.sh  configure_dual_network.sh  configure_robot_console_kiosk.sh  configure_wifi_reconnect.sh  generate_keepout_mask.py  git_publish.sh  install_ch341_safe.sh  install_jetson_dependencies.sh  install_local_kws.sh  install_platform_bridge_service.sh  install_ui_autostart.sh  install_wifi_reconnect_service.sh  mobile_bridge_owner.sh  rtk_smoke_test.sh  run_on_jetson.sh  run_patrol_low_load.sh  setup_zlac_can.sh  smoke_robot_platform_v1.py  start_inspection_ui_autostart.sh  test_route_map_tool_yaml.js  uninstall_ui_autostart.sh  uninstall_wifi_reconnect_service.sh  validate_route_safety.py  wifi_reconnect_once.sh
skills/good-testing/: SKILL.md
skills/robot-motion-test-boundary/: SKILL.md
skills/ros2-practice-first/: SKILL.md
src/: PROJECT_DOC_zh.md  README.md  bind_usb.sh  test_chassis.sh  电力巡检机器人使用与调试手册.md
src/hipnuc_imu/: CMakeLists.txt
src/ylhb_3d_mapping/: package.xml  setup.cfg  setup.py
src/ylhb_3d_mapping/config/: zed_spatial_mapping.yaml
src/ylhb_3d_mapping/docs/: zed_spatial_mapping.md
src/ylhb_3d_mapping/launch/: zed_spatial_mapping.launch.py
src/ylhb_3d_mapping/test/: test_zed_3d_asset_manager.py  test_zed_spatial_mapping_node.py  test_zed_svo_tools.py
src/ylhb_3d_mapping/ylhb_3d_mapping/: zed_3d_asset_manager.py  zed_spatial_mapping_node.py  zed_svo_capture_node.py  zed_svo_tools.py
src/ylhb_base/: CMakeLists.txt  package.xml
src/ylhb_base/config/: base_kinematics.yaml  collision_monitor_params.yaml  nav2_keepout_safe.xml  nav2_no_recovery.xml  nav2_params.yaml  nav2_params_keepout.yaml  slam_toolbox_params.yaml  zlac8015d.yaml
src/ylhb_base/include/ylhb_base/: wtrtk980_nmea.hpp
src/ylhb_base/launch/: bringup.launch.py  navigation.launch.py  navigation_keepout.launch.py
src/ylhb_base/scripts/: amcl_swing_relocalization_node.py  scan_map_relocalization_node.py
src/ylhb_base/src/: base_controller.cpp  imu_driver.cpp  wtrtk980_nmea.cpp  wtrtk980_nmea_node.cpp  zlac8015d_canopen_controller.cpp
src/ylhb_base/test/: test_bind_usb_rtk.py  test_bringup_imu_detection.py  test_bringup_rtk_config.py  test_nav2_localization_config.py  test_robot_geometry.py  test_scan_map_relocalization.py  test_slam_config.py  test_wtrtk980_nmea.cpp  test_zlac_drive_mapping.cpp
src/ylhb_base/urdf/: ylhb.urdf.xacro
src/ylhb_interfaces/: CMakeLists.txt  package.xml
src/ylhb_llm/: package.xml  setup.py
src/ylhb_mobile_bridge/: package.xml  setup.cfg  setup.py
src/ylhb_mobile_bridge/config/: mobile_bridge.yaml
src/ylhb_mobile_bridge/launch/: mobile_bridge.launch.py  patrol_executor.launch.py
src/ylhb_mobile_bridge/resource/: ylhb_mobile_bridge
src/ylhb_mobile_bridge/test/: test_map_manager.py  test_map_snapshot.py  test_mobile_bridge_server.py  test_network_status.py  test_patrol_executor_logic.py  test_patrol_route_store.py  test_platform_cloud_client.py  test_process_manager.py  test_ros_bridge_status.py  test_schemas.py  test_wifi_reconnect_scripts.py
src/ylhb_mobile_bridge/test/fixtures/: patrol_routes.json
src/ylhb_mobile_bridge/ylhb_mobile_bridge/: __init__.py  inspection_image_upload.py  map_manager.py  map_snapshot.py  map_upload.py  mobile_bridge_server.py  network_status.py  patrol_executor_node.py  patrol_route_store.py  platform_api.py  platform_cloud_client.py  platform_store.py  process_manager.py  ros_bridge.py  scene_upload.py  schemas.py
src/ylhb_perception/: package.xml
tools/route_map_tool/: README.md  route_map_tool.html
官方通信协议/: RTK_4G_WTRTK980_ROS2_接入说明.md
(+116 files in other folders)
