<?xml version="1.0"?>
<package format="3">
  <name>ylhb_mobile_bridge</name>
  <version>0.1.0</version>
  <description>HTTP/WebSocket bridge between mobile APP and ROS2 for the inspection robot initialization framework.</description>
  <maintainer email="dev@example.com">YLHB</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>fastapi</exec_depend>
  <exec_depend>uvicorn</exec_depend>
  <exec_depend>pydantic</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
